Fixed nav anchor tags displaying wrong size

--- a/_harp/journal/main.less
+++ b/_harp/journal/main.less
@@ -10,12 +10,16 @@ h1 {
         font-size:2.4em;
     }
 }
-p, pre, ul, li{
+ul, li{
+  font-weight: 400;
+  font-size: 1.3em;
+}
+p, pre{
   font-weight: 400;
   font-size: 1.5em;
 }
 .post-list,.post-item{list-style:none;margin-left:0;padding-left:0;}
-.post-item{ margin-bottom:0.4em;}
+.post-item{ margin-bottom:1.4em;}
 .page-title{margin-top:1.4em;}
 .page-nav{ display: block; font-weight: 700; font-size: 1.15em; text-align: center;}
 
@@ -24,3 +28,4 @@ p, pre, ul, li{
   padding-top:1em;
   background-color: @gray-lighter
 }
+
