--- a/_harp/main.less
+++ b/_harp/main.less
@@ -18,10 +18,11 @@ h1 {
     }
 }
 p, ul, li{
+  font-weight: 400;
   font-size: 1.3em;
 }
 .post-list,.post-item{list-style:none;margin-left:0;padding-left:0;}
-.post-item{ margin-bottom:1.4em;}
+.post-item{ margin-bottom:0.5em;}
 .page-title{margin-top:1.4em;}
 .page-nav{ display: block; font-weight: 700; font-size: 1.15em; text-align: center;}
 
